[project]
name = "raspa3"
version = "3.0.0"
description = "A simulation package for Monte Carlo"
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3",
  "numpy>=1",
  "pybind11>=2",
  "setuptools>=42"
]

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

